# Wikimedia-MDX

./: README.md  pyproject.toml  requirements.txt
src/: config.py  css_and_js_collector.py  html_processor.py  initial_setup.py  main.py  mdx_collector.py  ndjson_processor.py  parallel_processor.py  parquet_collector.py  txt_and_modules_collector.py
src/css_js/: common.css  common.js  frwiki.js  wiki.css  wiki.js  wiktionary.css
